# websocket-test

./: .editorconfig  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  Dockerfile  README.md  captain-definition  docker-compose.yaml  pylintrc  pyproject.toml  run.sh
.github/workflows/: ci_cd.yml  code-analysis.yml  pylint.yml
client/: client.py
performance_test/: docker-compose.yaml  package.json  tsconfig.json
performance_test/src/: prod_scenario.ts  utils.ts
performance_tests/: README.md  docker-compose.yaml  package.json  run_test.sh  run_test_local.sh  tsconfig.json
performance_tests/src/: default_load.ts  example.ts
server/: client.py  client_manager.py  delivery_manager.py  logger.py  main.py  message.py  message_handler.py  number_generator.py  request.py  request_handler.py  response.py  settings.py  utils.py
tests/: test_client.py  test_client_manager.py  test_delivery_manager.py  test_main.py  test_message.py  test_message_handler.py  test_number_generator.py  test_request.py  test_request_handler.py  test_response.py  test_server.py  test_settings.py  test_utils.py
tests/integration/: test_main.py
