[tool.poetry]
name = "server"
version = "0.1.0"
description = "Server using websocket."
authors = ["Márcio Roberto Andrade Souza Filho <marciorasf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
uvicorn = {extras = ["standard"], version = "^0.15.0"}

[tool.poetry.dev-dependencies]
black = {version = "^21.8b0", allow-prereleases = true}
pytest = "^6.2.5"
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \venv
)/
'''

