[tool.poetry]
name = "server"
version = "0.1.0"
description = "Server using websocket."
authors = ["Márcio Roberto Andrade Souza Filho <marciorasf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
asyncstdlib = "^3.10.1"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
black = {version = "^21.8b0", allow-prereleases = true}
pytest = "^6.2.5"
pytest-asyncio = "^0.15.1"
pre-commit = "^2.15.0"
mypy = "^0.910"
pytest-mock = "^3.6.1"
pytest-cov = "^2.12.1"
flake8 = "^3.9.2"
requests = "^2.26.0"
pytest-timeout = "^1.4.2"
pytest-freezegun = "^0.4.2"
types-freezegun = "^1.1.0"
websocket-client = "^1.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \venv
)/
'''

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
console_output_style = "progress"
addopts = [
  "--cov=server",
  "--cov-report=term-missing"
]
markers=[
  "integration"
]
